fix(navbar): firefox account link misalignment fix

--- a/src/app/components/knx-nav-user/nav-user.component.scss
+++ b/src/app/components/knx-nav-user/nav-user.component.scss
@@ -2,6 +2,7 @@
 
 .knx-nav-user {
   margin-top: 14px;
+  white-space: nowrap;
 }
 
 .knx-nav-user a {
